--- a/index.html
+++ b/index.html
@@ -10,23 +10,79 @@
     </head>
 
     <body>
-        <div class="header" style="margin-top: 30px">
-            <img src="images/siesta_logo_clouds.svg" style="width: 200px; height: 100px; position: absolute"/>
-            <img src="images/siesta_logo_basement_text_slogan.svg" style="margin-top: 70px">
+        <div class="content-wrapper header-wrapper">
+            <div class="content header">
+                <img src="images/header/siesta_logo_clouds.svg" style="width: 200px; height: 100px; position: absolute"/>
+                <img src="images/header/siesta_logo_basement_text_slogan.svg" style="margin-top: 70px">
+            </div>
         </div>
 
-        <div class="content-wrapper-1">
-            <div class="content-1">
-                <div>Test JavaScript/TypeScript code everywhere - in browsers, Node.js or Deno</div>
-                <img class="browser_logo" src="images/platform_logo/chrome_256x256.png">
-                <img class="browser_logo" src="images/platform_logo/firefox_256x256.png">
-                <img class="browser_logo" src="images/platform_logo/safari_256x256.png">
-                <img class="browser_logo" src="images/platform_logo/edge.svg">
-                <img class="browser_logo" src="images/platform_logo/nodejs.svg" style="width:80px">
-                <img class="browser_logo" src="images/platform_logo/deno.png">
-                <div>And in any framework</div>
+        <div class="content-wrapper content-wrapper-ubiquitous">
+            <div class="content content-ubiquitous">
+                <p>Test JavaScript/TypeScript code <span style="font-weight: bolder">everywhere</span> -</p>
+                <p>in browsers, Node.js or Deno</p>
+                <p>
+                    <img class="logo" src="images/platform_logo/chrome_256x256.png">
+                    <img class="logo" src="images/platform_logo/firefox_256x256.png">
+                    <img class="logo" src="images/platform_logo/safari_256x256.png">
+                    <img class="logo" src="images/platform_logo/edge.svg">
+                    <img class="logo" src="images/platform_logo/nodejs.svg" style="width:80px">
+                    <img class="logo" src="images/platform_logo/deno.png">
+                </p>
+                <p>All frameworks supported</p>
+                <p>
+                    <img class="logo" src="images/framework_logo/angular.svg">
+                    <img class="logo" src="images/framework_logo/react.png">
+                    <img class="logo" src="images/framework_logo/vue.png">
+                </p>
+            </div>
+        </div>
 
+        <div class="content-wrapper content-wrapper-2">
+            <div class="content content-split content-2">
+                <div class="content-left">
+                    <h1>Maximize performance</h1>
+                    <p>Launch the tests in parallel. Choose the isolation level -
+                        from same context (fastest, no isolation) to separate process (slower, clean context for every test)
+                    </p>
+                </div>
+                <div class="content-right">
+                    <img src="images/content/parallel.png">
+                </div>
+            </div>
+        </div>
 
+        <div class="content-wrapper content-wrapper-3">
+            <div class="content content-split content-3">
+                <div class="content-left">
+                    <img src="images/content/deep_diff.png">
+                </div>
+                <div class="content-right">
+                    <h1>Enjoy the first-class ergonomics</h1>
+                    <p>Siesta provides the accurate and very readable JSON diff for the deep equality assertion.
+                        Differences in the data are highlighted to be easily noticeable.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-wrapper content-wrapper-3">
+            <div class="content content-split content-3">
+                <div class="content-left">
+                    <img src="images/content/deep_diff.png">
+                </div>
+                <div class="content-right">
+                    <h1>Enjoy the first-class ergonomics</h1>
+                    <p>Siesta provides the accurate and very readable JSON diff for the deep equality assertion.
+                        Differences in the data are highlighted to be easily noticeable.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-wrapper footer-wrapper">
+            <div class="content footer">
+                <p>© 2009-2021 Bryntum AB, Nickolay Platonov</p>
             </div>
         </div>
     </body>
