--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <div class="content header">
                 <img src="images/header/siesta_logo_clouds.svg" style="width: 200px; height: 100px; position: absolute"/>
                 <img src="images/header/siesta_logo_basement_text_slogan.svg" style="margin-top: 70px">
+
+                <div class="tbar">
+                    <a href="https://github.com/bryntum/siesta"><i class="icon fab fa-3x fa-github"></i></a>
+                </div>
             </div>
         </div>
 
@@ -38,8 +42,8 @@
             </div>
         </div>
 
-        <div class="content-wrapper content-wrapper-2">
-            <div class="content content-split content-2">
+        <div class="content-wrapper content-wrapper-performance">
+            <div class="content content-split content-performance">
                 <div class="content-left">
                     <h1>Maximize performance</h1>
                     <p>Launch the tests in parallel. Choose the isolation level -
@@ -52,8 +56,8 @@
             </div>
         </div>
 
-        <div class="content-wrapper content-wrapper-3">
-            <div class="content content-split content-3">
+        <div class="content-wrapper content-wrapper-ergonomics">
+            <div class="content content-split content-ergonomics">
                 <div class="content-left">
                     <img src="images/content/deep_diff.png">
                 </div>
@@ -66,16 +70,19 @@
             </div>
         </div>
 
-        <div class="content-wrapper content-wrapper-3">
-            <div class="content content-split content-3">
-                <div class="content-left">
-                    <img src="images/content/deep_diff.png">
-                </div>
-                <div class="content-right">
-                    <h1>Enjoy the first-class ergonomics</h1>
-                    <p>Siesta provides the accurate and very readable JSON diff for the deep equality assertion.
-                        Differences in the data are highlighted to be easily noticeable.
-                    </p>
+        <div class="content-wrapper content-wrapper-getting-started">
+            <div class="content content-getting-started">
+                <h1>Get started in your environment:</h1>
+                <div class="content-split">
+                    <div class="content-left">
+                        <p><a target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_nodejs_getting_started_nodejs_.html#gettingstartednodejsguide">Node.js</a></p>
+                    </div>
+                    <div class="content-center">
+                        <p><a target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_browser_getting_started_browser_.html#gettingstartedbrowserguide">Browser</a></p>
+                    </div>
+                    <div class="content-right">
+                        <p><a target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_deno_getting_started_deno_.html#gettingstarteddenoguide">Deno</a></p>
+                    </div>
                 </div>
             </div>
         </div>
