--- a/index.html
+++ b/index.html
@@ -75,13 +75,33 @@
                 <h1>Get started in your environment:</h1>
                 <div class="content-split">
                     <div class="content-left">
-                        <p><a target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_nodejs_getting_started_nodejs_.html#gettingstartednodejsguide">Node.js</a></p>
+                        <p>
+                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_nodejs_getting_started_nodejs_.html#gettingstartednodejsguide">
+                                Node.js<br>
+                                <img class="logo" src="images/platform_logo/nodejs.svg" style="width:80px">
+                            </a>
+                        </p>
                     </div>
                     <div class="content-center">
-                        <p><a target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_browser_getting_started_browser_.html#gettingstartedbrowserguide">Browser</a></p>
+                        <p>
+                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_browser_getting_started_browser_.html#gettingstartedbrowserguide">
+                                Browsers<br>
+                                <span>
+                                    <img class="logo" src="images/platform_logo/chrome_256x256.png">
+                                    <img class="logo" src="images/platform_logo/firefox_256x256.png">
+                                    <img class="logo" src="images/platform_logo/safari_256x256.png">
+                                    <img class="logo" src="images/platform_logo/edge.svg">
+                                </span>
+                            </a>
+                        </p>
                     </div>
                     <div class="content-right">
-                        <p><a target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_deno_getting_started_deno_.html#gettingstarteddenoguide">Deno</a></p>
+                        <p>
+                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_deno_getting_started_deno_.html#gettingstarteddenoguide">
+                                Deno<br>
+                                <img class="logo" src="images/platform_logo/deno.png">
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
