--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <a href="https://github.com/bryntum/siesta"><i class="icon fab fa-3x fa-github"></i></a>
                 </div>
             </div>
+            <div class="background-left"></div>
+            <div class="background-right"></div>
         </div>
 
         <div class="content-wrapper content-wrapper-ubiquitous">
