--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://siesta.works/">
+        <meta property="og:title" content="Siesta | Stress-free JavaScript/TypeScript testing">
+        <meta property="og:description" content="Description">
+<!--        <meta property="og:image" content="https://linkfork.co/images/poster.png">        -->
+
         <link type="text/css" rel="stylesheet" href="css/styling.css">
 
 <!--        <script type="module" src="index.js"></script>-->
