- starting on preview

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta property="og:url" content="https://siesta.works/">
         <meta property="og:title" content="Siesta | Stress-free JavaScript/TypeScript testing">
         <meta property="og:description" content="Description">
-<!--        <meta property="og:image" content="https://linkfork.co/images/poster.png">        -->
+        <meta property="og:image" content="https://siesta.works/images/header/siesta_logo_basement_text_slogan.svg">
 
         <link type="text/css" rel="stylesheet" href="css/styling.css">
 
