--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://siesta.works/">
-        <meta property="og:title" content="Siesta | Stress-free JavaScript/TypeScript testing">
-        <meta property="og:description" content="Description">
-        <meta property="og:image" content="https://siesta.works/images/header/siesta_logo_basement_text_slogan.svg">
+        <!--
+            These tags does not seem to work, because of the SSL certificate:
+            https://developers.facebook.com/tools/debug/?q=siesta.works
+
+            TODO: change the certificate
+
+            <meta property="og:type" content="website">
+            <meta property="og:url" content="https://siesta.works/">
+            <meta property="og:title" content="Siesta | Stress-free JavaScript/TypeScript testing">
+            <meta property="og:description" content="Description">
+            <meta property="og:image" content="https://siesta.works/images/header/siesta_logo_basement_text_slogan.svg">
+        -->
 
         <link type="text/css" rel="stylesheet" href="css/styling.css">
 
