--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
+        <link rel="icon" href="images/logo/logo_on_transparent.svg" type="image/svg+xml">
+        <link rel="apple-touch-icon" href="images/logo/apple-touch-icon.png"/>
         <!--
             These tags does not seem to work, because of the SSL certificate:
             https://developers.facebook.com/tools/debug/?q=siesta.works
