--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 
         <link type="text/css" rel="stylesheet" href="css/styling.css">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-EESK2XZQZ8"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+            gtag('config', 'G-EESK2XZQZ8');
+        </script>
+
 <!--        <script type="module" src="index.js"></script>-->
     </head>
 
