- link to discord

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
                 <div class="tbar">
                     <a href="https://github.com/bryntum/siesta"><i class="icon fab fa-3x fa-github"></i></a>
+                    <a href="https://discord.gg/6mwJZGnwbq"><i class="icon fab fa-3x fa-discord"></i></a>
                 </div>
             </div>
             <div class="background-left"></div>
@@ -135,7 +136,11 @@
 
         <div class="content-wrapper footer-wrapper">
             <div class="content footer">
-                <p>© 2009-2021 Bryntum AB, Nickolay Platonov</p>
+                <p>
+                    <span>© 2009-2021 Bryntum AB, Nickolay Platonov</span>
+                    <a href="https://github.com/bryntum/siesta">Github</a>
+                    <a href="https://discord.gg/6mwJZGnwbq">Discord</a>
+                </p>
             </div>
         </div>
     </body>
