- some progress on responsiveness

--- a/index.html
+++ b/index.html
@@ -136,11 +136,10 @@
 
         <div class="content-wrapper footer-wrapper">
             <div class="content footer">
-                <p>
-                    <span>© 2009-2021 Bryntum AB, Nickolay Platonov</span>
-                    <a href="https://github.com/bryntum/siesta">Github</a>
-                    <a href="https://discord.gg/6mwJZGnwbq">Discord</a>
-                </p>
+                <span>© 2009-2021 Bryntum AB, Nickolay Platonov</span>
+                <a href="https://github.com/bryntum/siesta">Github</a>
+                <a href="https://discord.gg/6mwJZGnwbq">Discord</a>
+                <img src="./images/footer/siesta_logo_white_on_transparent.svg" class="footer-logo">
             </div>
         </div>
     </body>
