- some progress on responsiveness

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <body>
         <div class="content-wrapper header-wrapper">
             <div class="content header">
-                <img src="images/header/siesta_logo_clouds.svg" style="width: 200px; height: 100px; position: absolute"/>
-                <img src="images/header/siesta_logo_basement_text_slogan.svg" style="margin-top: 70px">
+                <img src="images/header/siesta_logo_basement_text_slogan_clouds.svg" style="margin-top: 0px" class="header-logo-full">
+                <img src="images/header/siesta_logo_minified.svg" class="header-logo-mini">
 
                 <div class="tbar">
                     <a href="https://github.com/bryntum/siesta"><i class="icon fab fa-3x fa-github"></i></a>
