--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <a href="https://discord.gg/6mwJZGnwbq"><i class="icon fab fa-3x fa-discord"></i></a>
                 </div>
             </div>
+            <img src="images/header/header_background_waves.svg" class="header-background-waves">
             <div class="background-left"></div>
             <div class="background-right"></div>
         </div>
