--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="content-split">
                     <div class="content-left">
                         <p>
-                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_nodejs_getting_started_nodejs_.html#gettingstartednodejsguide">
+                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Node_js.html">
                                 Node.js<br>
                                 <img class="logo" src="images/platform_logo/nodejs.svg" style="width:80px">
                             </a>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="content-center">
                         <p>
-                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_browser_getting_started_browser_.html#gettingstartedbrowserguide">
+                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_browser.html">
                                 Browsers<br>
                                 <span>
                                     <img class="logo" src="images/platform_logo/chrome_256x256.png">
@@ -125,7 +125,7 @@
                     </div>
                     <div class="content-right">
                         <p>
-                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/_src_guides_getting_started_deno_getting_started_deno_.html#gettingstarteddenoguide">
+                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Deno.html">
                                 Deno<br>
                                 <img class="logo" src="images/platform_logo/deno.png">
                             </a>
