- `get started` browsers

--- a/index.html
+++ b/index.html
@@ -102,34 +102,28 @@
             <div class="content content-getting-started">
                 <h1>Get started in your environment:</h1>
                 <div class="content-split">
-                    <div class="content-left">
-                        <p>
-                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Node_js.html">
-                                Node.js<br>
-                                <img class="logo" src="images/platform_logo/nodejs.svg" style="width:80px">
-                            </a>
-                        </p>
+                    <div class="content-left content-column">
+                        <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Node_js.html">
+                            Node.js
+                        </a>
+                        <img class="logo" src="images/platform_logo/nodejs.svg" style="width:80px">
                     </div>
-                    <div class="content-center">
-                        <p>
-                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_browser.html">
-                                Browsers<br>
-                                <span>
-                                    <img class="logo" src="images/platform_logo/chrome_256x256.png">
-                                    <img class="logo" src="images/platform_logo/firefox_256x256.png">
-                                    <img class="logo" src="images/platform_logo/safari_256x256.png">
-                                    <img class="logo" src="images/platform_logo/edge.svg">
-                                </span>
-                            </a>
-                        </p>
+                    <div class="content-center content-column">
+                        <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_browser.html">
+                            Browsers
+                        </a>
+                        <div class="logos">
+                            <img class="logo" src="images/platform_logo/chrome_256x256.png">
+                            <img class="logo" src="images/platform_logo/firefox_256x256.png">
+                            <img class="logo" src="images/platform_logo/safari_256x256.png">
+                            <img class="logo" src="images/platform_logo/edge.svg">
+                        </div>
                     </div>
-                    <div class="content-right">
-                        <p>
-                            <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Deno.html">
-                                Deno<br>
-                                <img class="logo" src="images/platform_logo/deno.png">
-                            </a>
-                        </p>
+                    <div class="content-right content-column">
+                        <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Deno.html">
+                            Deno
+                        </a>
+                        <img class="logo" src="images/platform_logo/deno.png">
                     </div>
                 </div>
             </div>
