--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="content-wrapper content-wrapper-ergonomics">
-            <div class="content content-split content-ergonomics">
+            <div class="content content-split content-split-reversed content-ergonomics">
                 <div class="content-left">
                     <img src="images/content/deep_diff.png">
                 </div>
