--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </head>
 
     <body>
-        <div class="content-wrapper header-wrapper">
-            <div class="content header">
+        <div class="content-wrapper content-wrapper-header">
+            <div class="content content-header">
                 <img src="images/header/siesta_logo_basement_text_slogan_clouds.svg" style="margin-top: 0px" class="header-logo-full">
                 <img src="images/header/siesta_logo_minified.svg" class="header-logo-mini">
 
@@ -67,6 +67,20 @@
                     <img class="logo" src="images/framework_logo/react.png">
                     <img class="logo" src="images/framework_logo/vue.png">
                 </p>
+            </div>
+        </div>
+
+        <div class="content-wrapper content-wrapper-onetool">
+            <div class="content content-split content-onetool">
+                <div class="content-left">
+                    <h1>Stay with one tool for all environments</h1>
+                    <p>Both in-page and out-of-page testing is supported for browser testing. Each of these modes has its
+                        advantages and drawbacks. You can choose the most suitable one for your use case.
+                    </p>
+                </div>
+                <div class="content-right">
+                    <img src="images/content/parallel.png">
+                </div>
             </div>
         </div>
 
@@ -129,8 +143,8 @@
             </div>
         </div>
 
-        <div class="content-wrapper footer-wrapper">
-            <div class="content footer">
+        <div class="content-wrapper content-wrapper-footer">
+            <div class="content content-footer">
                 <span>© 2009-2021 Bryntum AB, Nickolay Platonov</span>
                 <a href="https://github.com/bryntum/siesta">Github</a>
                 <a href="https://discord.gg/6mwJZGnwbq">Discord</a>
