- a bit more content

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="content-wrapper content-wrapper-onetool">
             <div class="content content-split content-onetool">
                 <div class="content-left">
-                    <h1>Stay with one tool for all environments</h1>
+                    <h1>Stay with one tool</h1>
                     <p>Both in-page and out-of-page testing is supported for browser testing. Each of these modes has its
                         advantages and drawbacks. You can choose the most suitable one for your use case.
                     </p>
@@ -98,16 +98,30 @@
             </div>
         </div>
 
-        <div class="content-wrapper content-wrapper-ergonomics">
-            <div class="content content-split content-split-reversed content-ergonomics">
+        <div class="content-wrapper content-wrapper-ui">
+            <div class="content content-split content-ui">
                 <div class="content-left">
-                    <img src="images/content/deep_diff.png">
+                    <h1>Use graphical interface</h1>
+                    <p>Siesta comes with graphical dashboard for running your testing project, so you can type less in console.
+                        Command line interface is, of course, also available for CI.
+                    </p>
                 </div>
                 <div class="content-right">
+                    <img src="images/content/dashboard.png">
+                </div>
+            </div>
+        </div>
+
+        <div class="content-wrapper content-wrapper-ergonomics">
+            <div class="content content-split content-ergonomics">
+                <div class="content-left">
                     <h1>Enjoy the first-class ergonomics</h1>
                     <p>Siesta provides the accurate and very readable JSON diff for the deep equality assertion.
                         Differences in the data are highlighted to be easily noticeable.
                     </p>
+                </div>
+                <div class="content-right">
+                    <img src="images/content/deep_diff.png">
                 </div>
             </div>
         </div>
