--- a/index.html
+++ b/index.html
@@ -134,24 +134,28 @@
                         <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Node_js.html">
                             Node.js
                         </a>
-                        <img class="logo" src="images/platform_logo/nodejs.svg" style="width:80px">
+                        <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Node_js.html">
+                            <img class="logo" src="images/platform_logo/nodejs.svg">
+                        </a>
                     </div>
                     <div class="content-center content-column">
                         <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_browser.html">
                             Browsers
                         </a>
-                        <div class="logos">
+                        <a class="logos" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_browser.html">
                             <img class="logo" src="images/platform_logo/chrome_256x256.png">
                             <img class="logo" src="images/platform_logo/firefox_256x256.png">
                             <img class="logo" src="images/platform_logo/safari_256x256.png">
                             <img class="logo" src="images/platform_logo/edge.svg">
-                        </div>
+                        </a>
                     </div>
                     <div class="content-right content-column">
                         <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Deno.html">
                             Deno
                         </a>
-                        <img class="logo" src="images/platform_logo/deno.png">
+                        <a class="get_started_link" target="_blank" href="https://bryntum.github.io/siesta/docs/modules/Guide__Getting_started_Deno.html">
+                            <img class="logo" src="images/platform_logo/deno.png">
+                        </a>
                     </div>
                 </div>
             </div>
