--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <img class="logo" src="images/platform_logo/nodejs.svg" style="width:80px">
                     <img class="logo" src="images/platform_logo/deno.png">
                 </p>
-                <p>All frameworks supported</p>
+                <p class="part2">All frameworks supported</p>
                 <p>
                     <img class="logo" src="images/framework_logo/angular.svg">
                     <img class="logo" src="images/framework_logo/react.png">
