--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <div class="content-wrapper content-wrapper-footer">
             <div class="content content-footer">
-                <span>© 2009-2021 Bryntum AB, Nickolay Platonov</span>
+                <span>© 2020-2025 Nickolay Platonov</span>
                 <a href="https://github.com/bryntum/siesta">Github</a>
                 <a href="https://discord.gg/6mwJZGnwbq">Discord</a>
                 <img src="./images/footer/siesta_logo_white_on_transparent.svg" class="footer-logo">
