--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="images/header/siesta_logo_minified.svg" class="header-logo-mini">
 
                 <div class="tbar">
-                    <a href="https://github.com/bryntum/siesta"><i class="icon fab fa-3x fa-github"></i></a>
+                    <a href="https://github.com/canonic-epicure/siesta"><i class="icon fab fa-3x fa-github"></i></a>
                     <a href="https://discord.gg/6mwJZGnwbq"><i class="icon fab fa-3x fa-discord"></i></a>
                 </div>
             </div>
@@ -163,7 +163,7 @@
         <div class="content-wrapper content-wrapper-footer">
             <div class="content content-footer">
                 <span>© 2020-2025 Nickolay Platonov</span>
-                <a href="https://github.com/bryntum/siesta">Github</a>
+                <a href="https://github.com/canonic-epicure/siesta">Github</a>
                 <a href="https://discord.gg/6mwJZGnwbq">Discord</a>
                 <img src="./images/footer/siesta_logo_white_on_transparent.svg" class="footer-logo">
             </div>
